--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -19,6 +19,26 @@ body{
     color:$dark;
 }
 
+@keyframes blurIn{
+    from{
+        transform: translateY(-15px);
+        filter:blur(10px);
+    }
+    to{
+        transform: translateY(0px);
+        filter:blur(0px);
+    }
+}
+
+@keyframes spin{
+    0%{
+      transform:translate(-50%,-50%) rotate(0deg) scale(1);
+    }
+    100%{
+      transform:translate(-50%,-50%) rotate(360deg) scale(1);
+    }
+  }
+
 .row.main{
     height:100vh;
 
@@ -31,6 +51,9 @@ body{
         background-color: $white;
         box-shadow:0px 20px 30px -10px rgba(0,0,0,.1);
         border-radius:5px;
+        animation-name: blurIn;
+        animation-duration:1s;
+        animation-fill-mode: forwards;
 
         .avatar{
             box-sizing: border-box;
@@ -38,15 +61,44 @@ body{
             border-radius:50px;
             width:100px;
             height:100px;
-            overflow:hidden;
         
-            img{
+            &:after{
+                content:'';
+                display:block;
                 position:absolute;
-                height:100%;
                 left:50%;
                 top:50%;
                 transform:translate(-50%,-50%);
-            }
+                height:100px;
+                width:100px;
+                background: url('https://s.gravatar.com/avatar/b0d61dacf1dda67e099c42e08a8e323e?s=100') center center no-repeat;
+                overflow:hidden;
+                border-radius:100px;
+                border:5px solid $white;
+              }
+              
+              &:before{
+                content:'';
+                display:block;
+                position:absolute;
+                left:50%;
+                top:50%;
+                transform:translate(-50%,-50%);
+                height:105px;
+                width:105px;
+                border-radius:60px;
+                background: #ddfaff;
+                background: -moz-linear-gradient(45deg, #ddfaff 0%, #00e5f9 50%, #0051a8 100%);
+                background: -webkit-linear-gradient(45deg, #ddfaff 0%,#00e5f9 50%,#0051a8 100%);
+                background: linear-gradient(45deg, #ddfaff 0%,#00e5f9 50%,#0051a8 100%);
+                filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ddfaff', endColorstr='#0051a8',GradientType=1 );
+                animation-name:spin;
+                animation-duration:1s;
+                animation-iteration-count:infinite;
+                animation-fill-mode:forwards;
+                animation-timing-function:linear;
+              }
+              
         }
 
         .name{
