--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -13,6 +13,15 @@ $black: #222;
     src: url(https://fonts.gstatic.com/s/productsans/v5/HYvgU2fE2nRJvZ5JFAumwegdm0LZdjqr5-oayXSOefg.woff2) format("woff2");
 }
 
+canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+ }
+
 body{
     background-color: $light;
     font-family: 'Product Sans', sans-serif;
