--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -19,7 +19,7 @@ canvas {
 
 body{
     background-color: $light;
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Quicksand', sans-serif !important;
     color:$dark;
 }
 
